# app.ts
@@ -1,12 +1,14 @@
 import express from "express";
 import authRoutes from "./routes/auth.routes";
 import { errorHandler } from "./middlewares/error.middleware";
+import userRoutes from "./routes/user.routes";
 
 const app = express();
 
 app.use(express.json());
 
 app.use("/api/auth", authRoutes);
+app.use("/api/users", userRoutes);
 
 app.get("/", (_req, res) => {
   res.json({
